--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>Lojaralho</title>
+    <title>Lojaralho - Sua lojinha do caralho!</title>
+    <style>
+        .main-header {
+            font-family: courier;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
+<header class="main-header">
+    <h1>Lojaralho</h1>
+</header>
+<div>
 
+    <a href="{% url 'login' %}">Faça login</a>
+    <a href="{% url 'signup' %}">Cadastre-se</a>
+</div>
 </body>
 </html>
