--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -14,6 +14,8 @@
 <header class="main-header">
     <h1>Lojaralho</h1>
 </header>
+{% block user_message %}
+{% endblock user_message %}
 <div>
 
     <a href="{% url 'login' %}">Faça login</a>
