--- a/webapp/templates/signup.html
+++ b/webapp/templates/signup.html
@@ -5,11 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-<form action="/signup/" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit"/>
-</form>
+    <a href="{% url 'login' %}">Já sou cadastrado</a>
+    <form action="/signup/" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Submit"/>
+    </form>
 
 </body>
 </html>
