Change index template based on whether user is authenticated
Closes #21

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -14,13 +14,17 @@
     <header class="main-header">
         <h1>Lojaralho</h1>
     </header>
-    <h2>
-        Bem vindo, {{ user.first_name }}!
-    </h2>
-    <div>
 
-        <a href="{% url 'login' %}">Faça login</a>
-        <a href="{% url 'signup' %}">Cadastre-se</a>
-    </div>
+    {% if user.is_authenticated %}
+        <h2>
+            Bem vindo, {{ user.first_name }}!
+        </h2>
+    {% else %}
+        <div>
+
+            <a href="{% url 'login' %}">Faça login</a>
+            <a href="{% url 'signup' %}">Cadastre-se</a>
+        </div>
+    {% endif %}
 </body>
 </html>
